Added PackBits compression and write to binary file